[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pan-cortex-data-lake"
keywords = [
    "cortex",
    "data",
    "lake",
    "datalake",
    "sdk",
    "api",
    "palo alto networks",
]
authors = [
    {name = "Steven Serrata", email = "sserrata@paloaltonetworks.com"},
]
maintainers = [
    {name = "Steven Serrata", email = "sserrata@paloaltonetworks.com"},
    {name = "Developer Relations", email = "devrel@paloaltonetworks.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: ISC License (ISCL)",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
license = {file = "LICENSE"}
requires-python = ">=3.5"
dynamic = ["version", "description"]
dependencies = [
    "requests >=2",
    "tinydb >=3,<4"
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "flake8",
    "tox",
    "coverage",
]

[project.urls]
Home = "https://cortex.pan.dev"
Source = "https://github.com/PaloAltoNetworks/pan-cortex-data-lake-python"
Documentation = "https://cortex.pan.dev/docs/develop/cdl_python_installation"

[tool.flit.module]
name = "pan_cortex_data_lake"

